# moldb

./: .gitignore  README.md  pyproject.toml
example/: load_ase.ipynb  qm9.py
src/moldb/: __init__.py  adapters.py  app.py  db.py  entities.py  presets.py
src/moldb/adapter/: base.py  h5.py
src/moldb/io/: __init__.py  ase.py
